Modified tasks to include GCSOperators and included logging and email alerting incase of task failures

--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -3,9 +3,9 @@
 FROM  apache/airflow:2.6.3
 # Set environment variables
 ENV AIRFLOW_HOME=/opt/airflow
-
 # Install Google Cloud SDK and any other packages apache/airflow:2.6.3
-RUN pip install google-cloud-storage boto3 beautifulsoup4 pandas numpy selenium apache-airflow==2.6.3
+RUN pip install google-cloud-storage boto3 beautifulsoup4 pandas numpy selenium
+#RUN pip install apache-airflow-providers-google==10.17.0
 #pandas numpy
 
 # Debugging information
