--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pandas pytest  # Install pandas and pytest
+          pip install -r requirements.txt
 
       - name: Run tests
         run: |
