Integrating API data DAG

--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -14,3 +14,5 @@ RUN pip --version
 RUN airflow version
 # If you have other dependencies, list them here
 # RUN pip install <other-dependency>
+RUN pip install pandas
+RUN pip install requests
