--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -14,6 +14,15 @@ x-airflow-common:
     AIRFLOW__DATABASE__SQL_ALCHEMY_POOL_RECYCLE: 300
     AIRFLOW__SCHEDULER__DAG_DIR_LIST_INTERVAL: 30
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
+    AIRFLOW__EMAIL__EMAIL_BACKEND: airflow.utils.email.send_email_smtp
+    AIRFLOW__SMTP__SMTP_HOST: smtp.gmail.com
+    AIRFLOW__SMTP__SMTP_STARTTLS: True 
+    AIRFLOW__SMTP__SMTP_SSL: False
+    AIRFLOW__SMTP__SMTP_USER: mlopsgcpproject@gmail.com
+    AIRFLOW__SMTP__SMTP_PASSWORD: jkhg qzkm najr ricp
+    AIRFLOW__SMTP__SMTP_PORT: 587
+    AIRFLOW__SMTP__SMTP_MAIL_FROM: mlopsgcpproject@gmail.com
+
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     GOOGLE_APPLICATION_CREDENTIALS: /opt/airflow/keys/gcp_key.json
