--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -22,10 +22,12 @@ x-airflow-common:
     AIRFLOW__SMTP__SMTP_PASSWORD: jkhg qzkm najr ricp
     AIRFLOW__SMTP__SMTP_PORT: 587
     AIRFLOW__SMTP__SMTP_MAIL_FROM: mlopsgcpproject@gmail.com
+    AIRFLOW__EMAIL__SUBJECT_TEMPLATE: /opt/airflow/templates/custom_email_subject.jinja
+    AIRFLOW__EMAIL__HTML_CONTENT_TEMPLATE: /opt/airflow/templates/custom_email_content.jinja 
 
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
-    GOOGLE_APPLICATION_CREDENTIALS: /opt/airflow/keys/gcp_key.json
+    GOOGLE_APPLICATION_CREDENTIALS: /opt/airflow/keys/gcp_key/pedalpulse-440019-edc2a9d73d26.json
   volumes:
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/dags/data:/opt/airflow/dags/data
@@ -33,7 +35,8 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins 
     - ${AIRFLOW_PROJ_DIR:-.}/keys:/opt/airflow/keys
-    - ${AIRFLOW_PROJ_DIR:-.}/keys/gcp_key.json:/opt/airflow/keys/gcp_key.json  
+    - ${AIRFLOW_PROJ_DIR:-.}/keys/gcp_key:/opt/airflow/keys/gcp_key
+    - ${AIRFLOW_PROJ_DIR:-.}/templates:/opt/airflow/templates
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -91,6 +94,7 @@ services:
     environment:
       <<: *airflow-common-env
       AIRFLOW__CORE__KILLED_TASK_CLEANUP_TIME: 3000  # Added here
+    
     mem_limit: 2G
     cpus: "1.5"
 
