Adding train/serve code

--- a/gcpdeploy/train/Dockerfile
+++ b/gcpdeploy/train/Dockerfile
@@ -13,12 +13,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy all project files (scripts, data)
 COPY . .
 
+# Create directory for MLflow logs
+RUN mkdir -p /app/mlruns
 # Set PYTHONPATH to ensure imports work
 ENV PYTHONPATH=/app
-
-# Set the environment variable for Google Application Credentials
-ENV GOOGLE_APPLICATION_CREDENTIALS="/app/scripts/gcp_key.json"
-
 
 # Add this to your Dockerfile to suppress Git-related warnings
 ENV GIT_PYTHON_REFRESH=quiet
