--- a/gcpdeploy/train/requirements.txt
+++ b/gcpdeploy/train/requirements.txt
@@ -1,10 +1,10 @@
 pandas
-scikit-learn
+scikit-learn==0.24.2
 mlflow
 joblib
 flask
 google-cloud-storage
 gunicorn
 mlflow==1.30.0
-gcsfs
-google-cloud-aiplatform 
+google-cloud-aiplatform  
+gcsfs  
