--- a/training/cloudbuild.yaml
+++ b/training/cloudbuild.yaml
@@ -26,7 +26,7 @@ steps:
         python train_deploy.py
 
 options:
-      defaultLogsBucketBehavior: 'REGIONAL_USER_OWNED_BUCKET'
+      logsBucket: 'skc-pedalpulse-testing'
       
 serviceAccount: 'mlops-project-sa@pedalpulse-skc.iam.gserviceaccount.com'
 
