--- a/training/cloudbuild.yaml
+++ b/training/cloudbuild.yaml
@@ -25,7 +25,7 @@ steps:
         pip install google-cloud-aiplatform google-cloud-storage
         python train_deploy.py
 
-logsBucket: '644185389530-us-east1-cloudbuild-logs'      
+logsBucket: 'gs://testing-bucket-bb'      
 serviceAccount: 'mlops-project-sa@pedalpulse-skc.iam.gserviceaccount.com'
 
 
