--- a/gcpdeploy/cloudbuild.yaml
+++ b/gcpdeploy/cloudbuild.yaml
@@ -6,6 +6,15 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/${_PROJECT_ID}/model-trainer:latest']
 
+  - name: 'gcr.io/cloud-builders/gcloud'
+    id: 'Fetch Service Account Key'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+          # Fetch the service account key from Secret Manager
+          gcloud secrets versions access latest --secret="my-service-account-key" > /workspace/key.json
+
   # Step 2: Pull and run the updated model-trainer image to train and save the model
   - name: 'gcr.io/cloud-builders/docker'
     args:
