--- a/gcpdeploy/cloudbuild.yaml
+++ b/gcpdeploy/cloudbuild.yaml
@@ -1,15 +1,4 @@
 steps:
-
-  - name: 'gcr.io/cloud-builders/gcloud'
-    id: Print PWD
-    entrypoint: 'bash'
-    args:
-        - '-c'
-        - |
-          echo "Current working directory:"
-          pwd
-          echo "Contents of the directory:"
-          ls -alh
   
   # Step 1: Build and push the training Docker image (model-trainer)
   - name: 'gcr.io/cloud-builders/docker'
@@ -17,6 +6,15 @@ steps:
 
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/${_PROJECT_ID}/model-trainer:latest']
+
+  
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        echo "Fetching service account key from Secret Manager..."
+        gcloud secrets versions access latest --secret=my-service-account-key > /workspace/key.json
 
   # Step 2: Pull and run the updated model-trainer image to train and save the model
   - name: 'gcr.io/cloud-builders/docker'
